kubernetes/apps/network/external-services/doco/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: doco-cd-proxy
  annotations:
    gatus.home-operations.com/endpoint: |-
      path: /v1/health
spec:
  hostnames:
    - doco.negative7.com
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: doco-cd-proxy
      matches:
        - path:
            type: PathPrefix
            value: /
